--- a/style.css
+++ b/style.css
@@ -101,4 +101,39 @@ body {
   }
 }
 
+.mainsec {
+  background-color: #1ab2c9;
+  display: flex;
+  
+}
+
+#pensivecoding {
+  float: right;
+  margin-left: 35%;
+  width: 400px;
+  height: 300px;
+  border-radius: 4em;
+  border-style: solid;
+}
+
+.footer {
+  background-color: var(--accent);
+  display: flexbox;
+  padding-bottom: 25%;
+
+   
+}
+
+#underconst {
+  width: 250px;
+  height: 150px;
+  float: none;
+  border-style: outset;
+  border-radius: 2em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
 /*done*/
